# portable-ffmpeg

./: pyproject.toml  setup.py
portable_ffmpeg-0.0.1.dist-info/: METADATA  RECORD  direct_url.json
portable_ffmpeg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
